--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <h1></h1>
     </head>
     <main>
-        texto
-        <input type="text">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
 
         botones
         <div>
