--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio - Encriptador</title>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
     <head>
-        titulo
-        <h1></h1>
+        <img id="logo" src="imagenes/Logo.jpeg">
     </head>
     <main>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-
+        <textarea id="mensaje" cols="40" rows="15">Ingrese el texto aqui</textarea>
+        <br>
         botones
         <div>
-            <button></button>
-            <button></button>      
+            <button>Encriptar</button>
+            <button>Desencriptar</button>      
         </div>  
         
         <aside>
