Agregar css y ocultar imagenes con js

--- a/index.html
+++ b/index.html
@@ -3,30 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio - Encriptador</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo.css">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
     <head>
-        <img id="logo" src="imagenes/Logo.jpeg">
+        <img id="logo" src="imagenes/Logo.svg">
     </head>
     <main>
-        <textarea id="mensaje" cols="40" rows="15">Ingrese el texto aqui</textarea>
-        <br>
-        botones
-        <div>
-            <button>Encriptar</button>
-            <button>Desencriptar</button>      
-        </div>  
-        
-        <aside>
-
-        </aside>
+        <textarea id="mensaje" placeholder="Ingrese el texto aquí" cols="40" rows="15"></textarea>        
+        <div id="botonesCaja">
+            <span><img src="imagenes/Info.svg" alt=""> Solo letras minúsculas y sin acentos</span> 
+            <br><br>
+            <button id="btnEncriptar" class="btnEstilo">Encriptar</button>
+            <button id="btnDesencriptar" class="btnEstilo">Desencriptar</button>      
+        </div>       
     </main>
-    <footer>
-        pie de pagina con mis datos
-    </footer>    
+    <aside>
+        <p id="textoClave"></p>
+        <div id="asideCompleto">
+            <img id="munheco" src="imagenes/Muñeco.svg">
+            
+            <div id="contenido">
+                <h1 id="tituloFeed">Ningún mensaje fue <br>encontrado</h1>
+                <p id="textoFeed">Ingresa el texto que desees encriptar o <br>desencriptar.</p>
+            </div>
+        </div>        
+    </aside>
+    <footer id="misDatos">
+        &copy; Creada por Marlon Daniel Turcios Sanchez 2022
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
