Estandarizando nombres de clases caja resolución

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <textarea class="textoResuelto" id="textoResuelto" cols="30" rows="10"></textarea>
             <button id="btnCopiar" class="botones btnDesencriptar btnCopiar">Copiar</button>
         </section>
-        <section id="cajaResolucion" class="cajaResolucion">
+        <section id="seccionSinResolver" class="seccionSinResolver">
             <img class="munheco" src="imagenes/Muñeco.svg">
             
-            <section class="textoSinResolver">
+            <div class="textoSinResolver">
                 <h1 class="hFeedSinResolver">Ningún mensaje fue encontrado</h1>
                 <p class="pFeedSinResolver">Ingresa el texto que desees encriptar o desencriptar.</p>
-            </section>
+            </div>
         </section>        
     </aside> 
 
