Terminando codigo de encriptador

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <aside>
         <section id="seccionTextoResuelto" class="seccionTextoResuelto" style="display: none;">
-            <textarea class="textoResuelto" id="textoResuelto" cols="30" rows="10"></textarea>
+            <textarea class="textoResuelto" id="textoResuelto" cols="30" rows="10" readonly></textarea>
             <button id="btnCopiar" class="botones btnDesencriptar btnCopiar">Copiar</button>
         </section>
         <section id="seccionSinResolver" class="seccionSinResolver">
